[project]
name = "4-fairness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fairlearn>=0.14.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
]
